--- a/3_GG Drinking Game.Rmd
+++ b/3_GG Drinking Game.Rmd
@@ -57,13 +57,15 @@ gg_trans_3gram <- gg_trans_raw %>%
 
 ```
 
-I had set out to build a Twitter bot that would come up with new Golden Girls quotes... I failed. I decided that in order to build a better bot, I should have a better understanding of the text which with I am working. The obvious choice as a  [tidytext](https://cran.r-project.org/web/packages/tidytext/vignettes/tidytext.html) analysis of Golden Girls scripts using [Julia Silge](https://twitter.com/juliasilge)'s paradigm. 
+I had set out to build a Twitter bot that would come up with new Golden Girls quotes... I failed. I decided that in order to build a better bot, I should have a better understanding of the input text - Golden Girls transcripts. The obvious choice was a  [tidytext](https://cran.r-project.org/web/packages/tidytext/vignettes/tidytext.html) analysis of the scripts using [Julia Silge](https://twitter.com/juliasilge)'s package and paradigm. 
 
-This approach has been used on many texts by now, from Pride and Prejudice to [Donald Trump's tweets](http://varianceexplained.org/r/trump-tweets/). For this post, I am going to jump off the rails a bit and do a tidytext analysis for... **The Golden Girls drinking game.**
+This approach has been used on many texts by now, from Pride and Prejudice to [Donald Trump's tweets](http://varianceexplained.org/r/trump-tweets/). For this post, I am going to jump off the rails a bit and do a tidytext analysis for... **The Golden Girls drinking game.**[^malcolm]
+
+[^malcolm]: ![Ian Malcolm](https://media.giphy.com/media/sgPllitbXVMqI/giphy.gif){#id .class width=300px}
 
 ### The Rules
 
-There are many permutations of the game online. For this analysis, I'm going to use these rules: Drink each time...
+There are many versions of the game across the internet. For this analysis, I'm going to use these rules: Drink each time...
 
 * The ladies eat cheesecake
 * Rose tells a story about St. Olaf
@@ -73,17 +75,17 @@ There are many permutations of the game online. For this analysis, I'm going to 
 
 ### The Goal
 
-In this crazy age of binge-watching and binge-drinking, I'm setting out to the find the solution to a simple question: **Which season of Golden Girls should you watch to maximize drink consumption?**
+In this age of binge-watching and binge-drinking, I'm setting out to the find (but not endorse) the solution to a simple question: **Which season of Golden Girls should you watch to maximize drink consumption?**
 
 ### The Data
 
-To do this analysis, I [scraped](https://github.com/ryantimpe/GoldenGirls/blob/master/data/Scrape_Transcripts.R) the transcripts of all `r length(unique(gg_trans_raw$Episode))` Golden Girls episodes from [Springfield! Springfield](https://www.springfieldspringfield.co.uk/episode_scripts.php?tv-show=the-golden-girls-1985) using [rvest](https://github.com/hadley/rvest). This source contains every spoken word in each episode. However, these transcripts are lacking both stage directions and the names of the people speaking each line. This missing data makes parsing the text for the drinking game a bit more challenging.
+To do this analysis, I [scraped](https://github.com/ryantimpe/GoldenGirls/blob/master/data/Scrape_Transcripts.R) the transcripts of all `r length(unique(gg_trans_raw$Episode))` Golden Girls episodes from [Springfield! Springfield](https://www.springfieldspringfield.co.uk/episode_scripts.php?tv-show=the-golden-girls-1985) using [rvest](https://github.com/hadley/rvest). This source contains every spoken word in each episode. However, these transcripts are missing stage directions and the names of the people speaking each line. This missing data makes analyzing the text for the drinking game a bit more challenging.
 
 ### The Game
 
-#### Cheesecake
+#### Cheesecake trigger
 
-Without stage directions in the scripts, I can't directly see if the women are eating cheesecake. Instead, I infer a lower-bound estimate using the dialogue. For this, I use two rules: (1) if the women are talking about cheesecake, they are eating it and (2) if they talk cheescake within 20 lines of dialogue, they are still eating that same cheesecake.
+Without stage directions in the scripts, I can't directly see if the women are eating cheesecake. Instead, I infer a lower-bound estimate using the dialogue. For this, I use two rules: (1) if the women are talking about cheesecake, they are eating it and (2) if they mention cheescake again within 20 lines of dialogue, they are still eating that same cheesecake.
 
 ```{r cheesecake, include = FALSE}
 cheesecake0 <- gg_trans_1gram %>% 
@@ -102,18 +104,19 @@ cheesecake %>% ggplot(aes(x = factor(Season), y = n)) +
   geom_col(color = "white", fill = tgg_colors[8]) +
   geom_label(aes(label = n), size = 6, 
              fill = tgg_colors[1], color = tgg_colors[9], nudge_y = -0.5) +
-  ggtitle("Cheesecakes discussed in The Golden Girls") + 
+  labs(title = "Cheesecakes discussed in The Golden Girls",
+      caption = "@RyanTimpe .com") + 
   xlab("Season") + ylab("Cheesecakes") +
   theme_tgg
 ```
 
-With this chart[^ggtheme], we run into a problem. In my *extensive research*, I came across a piece of trivia multiple times claiming over 100 cheesecakes were eaten over the course of the series.[^cheesecake] Using the transcripts with these rules, I'm only calculating `r sum(cheesecake$n)` cheesecakes. I tried relaxing the rules to include any mention of the word "cake", but after reviewing the text, these references include exclusively non-cheesecakes.[^cakes] For now, I'll assume the missing cheesecakes are uniformly distributed across the seasons, unaffecting the results.
+With this chart[^ggtheme], I've already run into a problem. In my *extensive research*, I came across a piece of trivia claiming over 100 cheesecakes were eaten over the course of the series.[^cheesecake] Using the transcripts with these rules, I only count `r sum(cheesecake$n)` cheesecakes. I tried relaxing the rules to include any mention of the word "cake", but after reviewing the text, these references include exclusively non-cheesecakes.[^cakes] For now, I assume the missing cheesecakes are uniformly distributed across the seasons and will not affect the results.
 
 [^ggtheme]: Have you noticed the unconventional (bright and tan) plot colors? This is my attempt at a Golden Girls (wicker furniture in Miami) theme in ggplot using [ggthemr](https://www.shanelynn.ie/themes-and-colours-for-r-ggplots-with-ggthemr/). `r emo::ji("dancing")`
 
 [^cheesecake]: I'm seeing this quoted by *super credible* sources including [Fox News](http://www.foxnews.com/entertainment/2017/01/17/10-things-never-knew-about-golden-girls.html), [Huffington Post](https://www.huffingtonpost.com/2015/09/14/the-golden-girls-_n_5512554.html), and [Mental Floss](http://mentalfloss.com/article/58118/7-times-golden-girls-talked-it-out-over-cheesecake). The closest I can find to a primary source is the [IMDB trivia](http://www.imdb.com/title/tt0088526/trivia) page. `r emo::ji("indifference")`
 
-[^cakes]: The Golden Girls enjoyed their desserts! In addition to cheesecake, they discussed wedding cake, marbled cake, chocolate cake, rum cake, birthday cake, St. Olaf friendship cake, sponge cake, bundt cake, fruitcake, hotcakes, and pancakes. They also once had crabcakes. `r emo::ji("cake")`
+[^cakes]: The Golden Girls enjoyed their desserts! In addition to cheesecake, they discussed wedding cake, marbled cake, chocolate cake, rum cake, birthday cake, St. Olaf friendship cake, sponge cake, bundt cake, cupcakes, fruitcake, hotcakes, and pancakes. They also once had crabcakes. `r emo::ji("cake")`
 
 #### The Golden Girls
 
@@ -151,19 +154,19 @@ dorothy0 <- gg_trans_2gram %>%
 
 dorothy <- dorothy0 %>% 
   count(Season)
-
-
 ```
 
 ##### Rose & St. Olaf
 
-For Rose's stories about St. Olaf, I use a similar rule as the cheesecake. If St. Olaf is referenced in the transcript, I assume Rose is involved in the story. Mentions of St. Olaf within 20 lines of each other are the same story and won't be counted.
+For Rose's stories about St. Olaf, I use a similar strategy as the cheesecake trigger. If St. Olaf is referenced in the transcript, I assume Rose is involved in the story. Mentions of St. Olaf within 20 lines of each other are the same story and won't be counted.
 
-It looks like St. Olaf was not a huge part of Rose's character until the middle seasons. Rose's first long (>10 lines) story about St. Olaf was in episode 4 of season 2.
+St. Olaf was not a huge part of Rose's character until the middle seasons. Rose's first long (>10 lines) story about St. Olaf was in episode 4 of season 2.
 
-##### Blanche & the S* word
+##### Blanche & the S* word[^sword]
 
-The 80's were a different time and while it's not acceptable today, the Golden Girls really liked to refer to each other (but mostly Blanche) as sluts. In fact, the word "slut" shows up `r sum(blanche$n)` times throughout the series, which is **exactly** the same number of times as "cheesecake". That's... ridiculous.[^cheesecake_cor]
+[^sword]: Never thought I'd use this word so many times in a data analysis. I'm not 100% comfortable with it, but in the interest of a fair literary analysis, here we are. `r emo::ji("please")`
+
+The 80's were a different time and, well... the Golden Girls really like to refer to each other (but mostly Blanche) as sluts. In fact, the word "slut" shows up `r sum(blanche$n)` times throughout the series, which is **exactly** the same number of times as "cheesecake". That's... ridiculous.[^cheesecake_cor]
 
 ```{r slut_cheesecake, echo=FALSE, message=FALSE, warning=FALSE, fig.width=9, fig.height=2.5}
 
@@ -187,8 +190,9 @@ slut_v_cheesecake %>% ggplot(aes(x = factor(Season), y = n)) +
   # coord_flip() +
   scale_fill_manual(values = c("cheesecake" = tgg_colors[8],
                                "slut" = tgg_colors[2])) + 
-  scale_y_continuous(limits = c(-max_y, max_y)) +
-  ggtitle("Frequency of 'cheesecake' and 'slut' usage in The Golden Girls") + 
+  scale_y_continuous(limits = c(-max_y, max_y), breaks = c(-10, 0, 10), labels = c(10, 0, 10)) +
+  labs(title = "Frequency of 'cheesecake' and 'slut' usage in The Golden Girls",
+       caption = "@RyanTimpe  .com") + 
   xlab("Season") + ylab("Mentions") +
   theme(legend.position = "right") +
   theme_tgg
@@ -197,13 +201,13 @@ slut_v_cheesecake %>% ggplot(aes(x = factor(Season), y = n)) +
 
 [^cheesecake_cor]: Fun fact: There's a `r round(as.numeric(corr_sc), 2)` correlation between the frequency of the word "cheesecake" and "slut" in a given season. `r emo::ji("chart")`
 
-In spirit of equal opportunity, the rule in this game is to count drinks when *anyone* is called a slut.
+In the spirit of equal opportunity, the rule in this game is to count drinks when *anyone* is called a slut.
 
 ##### Sophia & Picture It: Sicily...
 
-Finding instances of Sophia beginning an story with "Picture it" is easy. Rather than splitting the transcripts into single words, I use bigrams from all instances of "picture it".
+To find instances of Sophia beginning a story with "Picture it", I split the transcripts into bigrams (pairs of words) rather than words, and then apply a filter for all instances of "picture it."
 
-Sophia's most famous use of the phrase is to begin her stories about Sicily. Looking at the trigrams of the text, she also used it for Brooklyn, Germany, Morocco, and Miami.
+Sophia's most common use of the phrase is to begin her stories about Sicily. Looking at the trigrams of the text, she also uses it for Brooklyn, Germany, Morocco, and Miami.
 
 ##### Dorothy & Stanley
 
@@ -214,11 +218,11 @@ dorothy_alt <- gg_trans_1gram %>%
   count(Season)
 ```
 
-The original rule for Dorothy was to drink each time Dorothy refered to Sophia as "Ma". Exploratory data analyis shows that this happened `r sum(dorothy_alt$n)` distinct times over the course of the series and all game players would pass out from drink consumption within 20 minutes.[^citationneeded]
+The original rule for Dorothy was to drink each time Dorothy refers to Sophia as "Ma". Exploratory data analyis shows that this happened `r sum(dorothy_alt$n)` distinct times over the course of the series and all game players would pass out from drink consumption within 20 minutes.[^citationneeded]
 
-[^citationneeded]: Citation needed. `r emo::ji("teacher")`
+[^citationneeded]: Citation needed. `r emo::ji("shrug")`
 
-Throughout the series, Dorothy is hung up on her sleazy ex-husband, Stan. An alternative rule I found is to drink whenever Dorothy exclaims "38 years" - the length of her marriage - or she uses the phrase "It's me, Stan" (which happens more often than you'd think).
+Throughout the series, Dorothy is hung up on her sleazy ex-husband, Stan. An alternative rule I found is to drink whenever Dorothy exclaims "38 years" - the length of her marriage - or she uses the phrase "It's me, Stan."
 
 ##### Combining the rules
 
@@ -238,19 +242,20 @@ other_girls %>% ggplot(aes(x = factor(Season), y = n)) +
   #geom_label(aes(label = n), size = 4, 
   #           fill = tgg_colors[1], color = tgg_colors[9], nudge_y = -1) +
   facet_grid(.~Rule)+
-  ggtitle("Rose, Blanche, Sophia, and Dorothy triggers") + 
+  labs("Rose, Blanche, Sophia, and Dorothy triggers",
+       caption = "@RyanTimpe .com") + 
   xlab("Season") + ylab("Mentions") +
   theme(legend.position = "bottom") +
   theme_tgg
 ```
 
-Mentions of St. Olaf will drive the drink consumption in this game. There are alternative rules for the Golden Girls drinking game where each player chooses a character and only drinks when that character's rule is triggered. In those cases... pick Rose.
+Putting it all together, mentions of St. Olaf drive the drink consumption in this game. There are alternative rules for the Golden Girls drinking game where each player chooses a character and only drinks when that character's rule is triggered. In those cases... pick Rose.
 
 ### The Results
 
-So you and your closest friends get together on a Saturday night to play the Golden Girls drinking game and need to pick a season to maximize consumption. 
+You and your closest friends get together on a Saturday night to play the Golden Girls drinking game and need to pick a season to maximize consumption. 
 
-By choosing season 5, you will consume the most beverages over the course of the evening. But is it the most efficient way to consume them?
+By choosing season 5, you will consume the most beverages over the course of the evening. Is this the most efficient solution?
 
 ```{r result_table, echo=FALSE, message=FALSE, warning=FALSE, fig.width=9, fig.height=3}
 cheesecake %>% 
@@ -263,20 +268,24 @@ cheesecake %>%
                                "Rose | St. Olaf" = tgg_colors[3],
                                "Blanche | Slut" = tgg_colors[2], 
                                "Sophia | Picture It:" = tgg_colors[7], 
-                               "Dorothy | Stan" = tgg_colors[6])) + 
+                               "Dorothy | Stan" = tgg_colors[6]),
+                    name = "Rule") + 
   #geom_label(aes(label = n), size = 4, 
   #           fill = tgg_colors[1], color = tgg_colors[9], nudge_y = -1) +
-  labs(title = "Drinks per season of The Golden Girls") + 
-  xlab("Season") + ylab("Mentions") +
+  labs(title = "Drinks per season of The Golden Girls",
+       caption = "@RyanTimpe .com") + 
+  xlab("Season") + ylab("Drinks") +
   theme(legend.position = "right") +
   theme_tgg
 ```
 
 ### Minute-by-minute gameplay
 
-Watching an entire season (9+ hours) of a show is quite the committment for casual evening drinking game. Which season should you watch in order to consume as many drinks as you can in the **shortest time**?
+Watching an entire season (9+ hours) of a show is quite the committment[^worthit] for a drinking game. Which season should you watch in order to consume drinks in the **shortest time**?
 
-I start by converting the episodes in each season to a running tally of time. Each half-hour episode is approximately 22-minutes long, though 11 of the episodes were hour-long (44 minutes).[^eplength] From there, I calculate the timing for each drink when watching a given season.
+[^worthit]: Totally worth it. `r emo::ji("perfect")`
+
+I start by converting the episodes in each season to a running tally of time. Each half-hour episode is approximately 22-minutes long, though 11 of the episodes were hour-long (44 minutes)[^eplength]. With that, I calculate the time of each trigger for each season.
 
 [^eplength]: Without an explicit list of the longer episodes, I assign the the 11 episodes with the most lines in the transcript as the hour-long ones. `r emo::ji("time")`
 
@@ -318,14 +327,15 @@ timeline %>%
                                "7" = tgg_colors[4]),
                      name = "Season") + 
   scale_x_continuous(breaks = seq(0, 600, 100)) +
-  labs(title = "Cumulative drinks for each season of The Golden Girls") + 
+  labs(title = "Cumulative drinks for each season of The Golden Girls",
+       caption = "@RyanTimpe .com") + 
   xlab("Time (minutes)") + ylab("Drinks") +
   theme(legend.position = "right") +
   theme_tgg
 
 ```
 
-Season 5 is the way to go for steady drink consumption all night long. However, if you're playing the Golden Girls drinking game with speed in mind, perhaps seasons 4 or 6 are the more logical choices. In fact, it will take over 7 hours of viewing until the season 5 drink count passes seasons 4 or 6.
+Season 5 is the way to go for steady drink consumption all night long. If you're playing the Golden Girls drinking game with speed in mind, perhaps seasons 4 or 6 are the more logical choices - it will take over 7 hours of watching season 5 before the drink count exceeds seasons 4 or 6.
 
 With seasons 4 and 6, you get an hour at a relaxed pace before consuming up to 30 drinks in 20 minutes. What's causing that ramp?
 
@@ -346,13 +356,15 @@ timeline %>%
   scale_x_continuous(breaks = seq(0, 600, 100)) +
   facet_grid(factor(Season) ~ . ) +
   labs(title = "Cumulative drink count by trigger, Seasons 4-6",
-       caption = "@RyanTimpe") + 
+       caption = "@RyanTimpe .com") + 
   xlab("Time (minutes)") + ylab("Drinks") +
   theme(legend.position = "bottom") +
   theme_tgg
 
 ```
 
-Both ramps in seasons 4 and 6 are caused by Rose's St. Olaf storylines. The ramp in season 6 also has a few Dorothy / Stan drinks as well. Season 6 is also noteworthy as there is a gap between drinks lasting more than an hour starting around hour 4.
+The ramps in seasons 4 and 6 are both caused by Rose's St. Olaf storylines, with a few Dorothy triggers during the season 6 ramp.
 
-The result? Season 4 is the way to go for to maximize drink consumption in a reasonable time.
+### Conclusion?
+
+Let's be honest - any game that requires watching The Golden Girls is a game worth playing, regardless of how many drinks you have. But I set out to answer a question - which season (reasonably) maximizes drink consumption? Seasons 4, 5, or 6 are the way to go.
